--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+#
+# src stuff
+src/.idea
+.idea/workspace.xml
+src/idea/workspace.xml
+src/saved_nets/CPINN/*
+src/saved_nets/
+.idea/
+src/output_files
+src/.bash_history
+src/.keras
+
